[package]
name = "esri_ascii_grid"
version = "0.2.1"
edition = "2021"
authors = ["Seb Smith"]
description = "A library for reading ESRI Ascii Grid .asc files"
license = "MIT OR Apache-2.0"
readme = "readme.md"
keywords = ["ESRI", "ASCII", "asc", "grid", "raster"]
repository = "https://github.com/Seb105/esri-ascii-grid-rs"

[dependencies]
replace_with = "0.1.7"
thiserror = "1.0.59"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
