[package]
name = "esri_ascii_grid"
version = "0.4.6"
edition = "2024"
authors = ["Seb Smith"]
description = "A library for reading ESRI Ascii Grid .asc files"
license = "MIT OR Apache-2.0"
readme = "readme.md"
keywords = ["ESRI", "ASCII", "asc", "grid", "raster"]
repository = "https://github.com/Seb105/esri-ascii-grid-rs"
exclude = ["/test_data"]

[profile.dev]
# Full backtraces in debug mode
debug = true

[dependencies]
num-traits = "0.2.19"
ordered-float = { version = "5.0.0", optional = true }
replace_with = "0.1.7"
thiserror = "2.0.12"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ordered-float = ["dep:ordered-float"]
